--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mamma's Counter Grid</title>
+    <title>Chess Grid</title>
     <style>
         body {
             background-color: #F5F7F8;
@@ -12,7 +12,7 @@
             display: grid;
             grid-template-columns: repeat(10, 1fr);
             grid-template-rows: repeat(10, 1fr);
-            gap: 5px; 
+            gap: 5px; /* Adds margin between blocks */
             width: max-content;
             margin: 50px auto;
         }
@@ -22,22 +22,25 @@
             background-color: #000000;
             color:#F5F7F8;
             padding: 5px;
-            box-sizing: border-box;
+            box-sizing: border-box; /* Ensures padding doesn't increase size */
+            cursor: pointer; /* Add a cursor to indicate it's clickable */
         }
     </style>
 </head>
 <body>
     <div id="container">
+        <!-- Creates 100 blocks with a class "block" -->
         <script>
             for (let i = 1; i <= 100; i++) {
                 const block = document.createElement('div');
                 block.classList.add('block');
                 block.innerHTML = i;
                 block.onclick = function () {
-                    if (this.style.backgroundColor === 'rgb(124, 147, 195)') {
-                        this.style.backgroundColor = '#000000';
+                    // Toggle between black and yellow
+                    if (this.style.backgroundColor === 'rgb(0, 0, 0)') {
+                        this.style.backgroundColor = '#FCDE70'; // Yellow
                     } else {
-                        this.style.backgroundColor = '#FCDE70';
+                        this.style.backgroundColor = '#000000'; // Black
                     }
                 };
                 document.getElementById('container').appendChild(block);
